# projecteuler

./: 2  2.hs  3.hs  3.py  4.py  5.py  7.hs  7.py  9  Fibonacci.hs  Primes.hs  Pythagorean.hs
Haskell/: 002.hs  009.hs  011.hs  012.hs  015.hs  016.hs  018.hs  019.hs  020.hs  043.hs  1.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  19.hs  2.hs  22.hs  22.txt  4.hs  43.hs  6.hs  7.hs  8.hs  9.hs  Collatz.hs  Euler.hs  Factorial.hs  Primes.hs  TriangleNumbers.hs
Python/: 6.py  8.py
Rust/: Cargo.toml
Rust/src/: fibonacci.rs  lib.rs  permutations.rs  primes.rs
gleam/: gleam.toml
gleam/src/: euler.gleam  p29.gleam  p30.gleam  p33.gleam
haskell/: 003.hs  005.hs  006.hs  008.hs  013.hs  014.hs  017.hs  018.hs  021.hs  022.hs  022.txt  023.hs  024.hs  029.hs  067.hs  Euler.hs
python/: 1.py
rust/src/: fibonacci.rs  lib.rs  primes.rs
