[package]
name = "projecteuler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "007"
path = "src/bin/007.rs"
[[bin]]
name = "015"
path = "src/bin/015.rs"
[[bin]]
name = "023"
path = "src/bin/023.rs"
[[bin]]
name = "024"
path = "src/bin/024.rs"
[[bin]]
name = "025"
path = "src/bin/025.rs"
[[bin]]
name = "026"
path = "src/bin/026.rs"
[[bin]]
name = "027"
path = "src/bin/027.rs"
[[bin]]
name = "028"
path = "src/bin/028.rs"
[[bin]]
name = "029"
path = "src/bin/029.rs"
[[bin]]
name = "032"
path = "src/bin/032.rs"

[dependencies]
num-bigint = "0.4.6"
num-traits = "0.2.18"
